[package]
name = "ember"
authors = ["Hugh MacNally"]
version = "0.1.0"
rust-version = "1.71.0"
edition = "2021"
description = "A simple 2D game library."
homepage = "https://github.com/HMacN/ember"
repository = "https://github.com/HMacN/ember"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.winit]
version = "=0.30.7"
features = ["default"]